errores/makemain.txt
operadores.c: In function ‘cargar_operador’:
operadores.c:70:20: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     opAux->simbolo = sim;
                    ^
operadores.c:88:18: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
   opAux->simbolo = sim;
                  ^
operadores.c: In function ‘crear_tabla_operadores’:
operadores.c:102:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "+" , 2 , suma);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:103:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "-" , 2 , resta);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:104:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "--" , 1 , opuesto);
                           ^~~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:105:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "*" , 2 , producto);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:106:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "/" , 2 , division);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:107:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "%" , 1 , modulo);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
operadores.c:108:27: warning: passing argument 2 of ‘cargar_operador’ makes integer from pointer without a cast [-Wint-conversion]
   cargar_operador(tabla , "^" , 2 , potencia);
                           ^~~
operadores.c:65:6: note: expected ‘char’ but argument is of type ‘char *’
 void cargar_operador (TablaOp indice,char sim,int ari,FuncionEvaluacion func){
      ^~~~~~~~~~~~~~~
cc	-c	ExpTree.c
ExpTree.c:11:1: warning: useless storage class specifier in empty declaration
 };
 ^
ExpTree.c: In function ‘ExpTree_unir’:
ExpTree.c:25:3: warning: implicit declaration of function ‘assert’; did you mean ‘qsort’? [-Wimplicit-function-declaration]
   assert(nuevoNodo != NULL);
   ^~~~~~
   qsort
ExpTree.c:26:17: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
   nuevoNodo->op = op;
                 ^
ExpTree.c: At top level:
ExpTree.c:37:1: warning: useless storage class specifier in empty declaration
 };
 ^
ExpTree.c: In function ‘ExpTree_Parse’:
ExpTree.c:63:19: warning: implicit declaration of function ‘strtock’; did you mean ‘strtok’? [-Wimplicit-function-declaration]
     while(token = strtock(sentence, " ")){
                   ^~~~~~~
                   strtok
ExpTree.c:63:17: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     while(token = strtock(sentence, " ")){
                 ^
ExpTree.c:70:25: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
             node->value = NULL;
                         ^
ExpTree.c:72:18: error: dereferencing pointer to incomplete type ‘struct _Op’
             if(op->aridad >= 1){
                  ^~
ExpTree.c: In function ‘ExpTree_inorder’:
ExpTree.c:103:16: warning: implicit declaration of function ‘to_string’ [-Wimplicit-function-declaration]
         return to_string(tree->value);
                ^~~~~~~~~
ExpTree.c:103:16: warning: return makes pointer from integer without a cast [-Wint-conversion]
         return to_string(tree->value);
                ^~~~~~~~~~~~~~~~~~~~~~
ExpTree.c:111:12: warning: function returns address of local variable [-Wreturn-local-addr]
     return base;
            ^~~~
makefile:12: fallo en las instrucciones para el objetivo 'ExpTree.o'
make: *** [ExpTree.o] Error 1
